2003-08-22 Mariusz Woloszyn
	* library.c: added Nikon CoolPix 4500 and HP PhotoSmart 935, thanks
	  to T. Kaproncai
2003-07-28 Mariusz Woloszyn
	* library.c: removed Kodak DC290, DX4230, DX4300, changed productID
	  of Kodak CX4210 and added Nikon Coolpix 5400. Thanks to T.
	  Kaproncai
2003-07-17 Mariusz Woloszyn
	* library.c: added following cameras: Kodak DC290, Kodak DX4530,
	  Kodak DX6440, Kodak DX6490, Kodak LS663, Kodak CX4230,
	  Kodak CX6200, Kodak CX6230, Kodak CX6330, HP PhotoSmart 120,
	  HP PhotoSmart 620, HP PhotoSmart 735, HP PhotoSmart 812
2003-07-09 Mariusz Woloszyn
	* library.c: added Nikon Coolpix SQ: M. Holzbauer
2003-06-12 Mariusz Woloszyn
	* library.c: added DX6340 explicite support
2003-05-14 Mariusz Woloszyn
	* ptpcam.c: changed test_ptp.c to ptpcam.c;
	* Makefile.am: changed test_ptp.c to ptpcam.c;
	* TODO: added the idea of error reporting improvement
	* README: reorganized a bit
2003-05-13 Mariusz Woloszyn
	* ptp-pack.c: ptp_pack_DPV() fixup;
	* ptp.c: reorganized reporting errors, added ptp_perror();
	* ptp.h: added ptp_perror() prototype;
	* test_ptp.c: reorganized reporting errors; added property setting
	  support!
2003-05-12 Mariusz Woloszyn
	* ptp.c: fflush(stderr) on error and debug; 
	  added datatype argument for ptp_getdevicepropvalue();
	  added ptp_setdevicepropvalue();A
	* ptp-pack.c: added ptp_unpack_DPV() and ptp_pack_DPV();
	  fixed missing strings while unpacking enumerated DPD;
	* ptp.h: fixed ptp_getdevicepropvalue() prototype and added
	  ptp_setdevicepropvalue() prototype;
	* .cvsignore: changed ptp_test to ptpcam
	* Makefile.am: changed ptp_test to ptpcam
	* test_ptp.c: reorganized debug/error output, added more verbose
	  levels; fixed extension properties debug (only EK supported as for
	  now); added property supported values output; 
2003-05-09 Mariusz Woloszyn
	* test_ptp.c: added the device reset option (uses class specific
	  reset)
2003-05-09 Mariusz Woloszyn