@@ -84,7 +84,11 @@ Nikon Coolpix 2500	| 0x04b0  |  0x0109  |
 Nikon Coolpix 4500	| 0x04b0  |  0x010b  |
 Nikon Coolpix 5700	| 0x04b0  |  0x010d  |
 Nikon Coolpix 4300	| 0x04b0  |  0x010f  |
+Nikon Coolpix 3500	| 0x04b0  |  0x0111  |
 Nikon Coolpix 885	| 0x04b0  |  0x0112  |
+Nikon Coolpix 5000	| 0x04b0  |  0x0113  |
+Nikon Coolpix 3100	| 0x04b0  |  0x0115  |
+Nikon Coolpix 2100	| 0x04b0  |  0x0117  |
 Nikon Coolpix 5400	| 0x04b0  |  0x0119  |
 ------------------------+---------+----------+
 Canon PowerShot S45	| 0x04a9  |  0x306d  |
@@ -94,7 +98,7 @@ Canon Digital IXUS v3	| 0x04a9  |  0x3071  |
 Canon PowerShot A70	| 0x04a9  |  0x3073  |
 ==============================================
 
-Above list might be outdated!
+ABOVE LIST MIGHT BE OUTDATED!
 
 Note that for some HP, Nikon, Canon and Sony cameras you have to switch
 them to PTP mode as in most cases the camera is dual mode:
