@@ -1,3 +1,6 @@
+2003-08-28 Mariusz Woloszyn
+	* library.c: added Nikon Coolpix 3500, 5000, 3100 & 2100, thanks to
+	  Antti Tuominen
 2003-08-22 Mariusz Woloszyn
 	* library.c: added Nikon CoolPix 4500 and HP PhotoSmart 935, thanks
 	  to T. Kaproncai
